--- a/cv/cv.html
+++ b/cv/cv.html
@@ -34,7 +34,7 @@
                 	<br><br>
                    <li class="email"><i class="fa fa-envelope"></i><a href="mailto: saifulcseng@gmail.com">afaquejaya123@gmail.com</a></li>
                     <li class="linkedin"><i class="fa fa-linkedin"></i><a href="https://www.linkedin.com/in/afaque-jaya-5b6311134" target="_blank">linkedin.com/in/afaquejaya/</a></li>
-                    <li class="github"><i class="fa fa-github"></i><a href="https://github.com/Afaquejaya?tab=repositories" target="_blank">github.com/Afaquejaya</a></li>
+                    <li class="github"><i class="fa fa-github"></i><a href="https://github.com/Afaquejaya" target="_blank">github.com/Afaquejaya</a></li>
                     <li class="stack-overflow"><i class="fa fa-stack-overflow"></i><a href="https://afaquejaya.github.io/" target="_blank">Ask-Ubuntu : Afaquejaya</a></li>
                     <li class="stack-overflow"><i class="fa fa-code"></i><a href="https://www.hackerrank.com/afaquejaya123/" target="_blank">hackerrank.com/Afaquejayaa></li>
               </ul>
