--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>AfaqueJaya JH | Computer Science</title>
+    <title>AfaqueJaya | Computer Science</title>
     <meta name="description" content="Personal Website of Afaque Jaya, Computer Science Engineering Student, Developer" />
     <meta name="keywords" content="afaquejaya , afaquejaya,java ,c# developer, Personal, Website, Resume, CV,B.A.College of engineering & Technology, Computer Science, Engineer" />
     <meta name="author" content="afaquejaya" />
