--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                                     <div class="control">
                                         <div class="tags">
                                             <a class="tag is-primary">blog Project</a>
-                                            <a class="tag is-danger">Android Studio</a>
+                                            <a class="tag is-info">Android Studio</a>
                                             <a class="tag is-warning">2020</a>
                                             <a class="tag is-success">API</a>
                                         </div>
@@ -154,7 +154,7 @@
                                     <div class="control">
                                         <div class="tags">
                                             <a class="tag is-primary">For Learning</a>
-                                            <a class="tag is-danger">Android Studio</a>
+                                           <a class="tag is-info">Android Studio</a>
                                             <a class="tag is-warning">2019</a>
                                         </div>
                                     </div>
