--- a/index.html
+++ b/index.html
@@ -381,9 +381,9 @@
                 </a>
             </p>
             <p>
-                Copyrights © <a target="_blank" href="index.html">Afaque</a> 2020 |
+                Copyrights © <a target="_blank" href="index.html">Afaque Jaya</a> 2020 |
                 Made with <i class="em em-yellow_heart"></i>
-                in Jharkhand
+                in Jharkhand | India
             </p>
         </div>
     </footer>
