--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                                     <img src="img/portfolio/gallery7.png" >
                                 </figure>
                                 <div style="margin-top:1em" class="content">
-                                    Web App is a web application to provide the communication between the person who lost the item and the one who find it.
+                                    Web App is for Android,ios,Windows.
                                     <br>
                                     <br>
                                 </div>
@@ -295,7 +295,7 @@
                         <div class="card">
                             <header class="card-header">
                                 <p class="card-header-title">
-                                    <span>WebView App  </span>
+                                    <span>Web View App  </span>
                                     <span class="is-pulled-right">
                                         <span class="tag is-success"> JAVA</span>
                                     </span>
@@ -306,7 +306,7 @@
                                     <img src="img/portfolio/gallery8.jpg" >
                                 </figure>
                                 <div style="margin-top:1em" class="content">
-                                    Web view.
+                                    Web view App for Android.
                                     <br>
                                     <br>
                                 </div>
