--- a/index.html
+++ b/index.html
@@ -131,6 +131,8 @@
                             </footer>
                         </div>
                     </div>
+			
+			
                     <div class="column">
                         <!-- If you played for -->
                         <div class="card">
@@ -171,8 +173,8 @@
                         </div>
                     </div>
                    
+						<!-- ----Techfinix-- -->							
                     <div class="column">
-                        <!-- Techfinix'18 -->
                         <div class="card">
                             <header class="card-header">
                                 <p class="card-header-title">
@@ -211,10 +213,9 @@
                     </div>
                 </div>
 
-                <!-- 2rd line -->
+               						 <!-- Google Login -->
                 <div class="columns">
                     <div class="column">
-                        <!-- AMDF -->
                         <div class="card">
                             <header class="card-header">
                                 <p class="card-header-title">
@@ -250,8 +251,9 @@
                             </footer>
                         </div>
                     </div>
+			
+							<!-- WEB VIEW APP (XAMARIN)-->
                     <div class="column">
-                        <!-- ReturnMyStuff -->
                         <div class="card">
                             <header class="card-header">
                                 <p class="card-header-title">
@@ -290,9 +292,9 @@
                         </div>
                     </div>
 			
+							 <!-- WEB APP (ANDROID) -->
 			<div class="column">
-                        <!-- ReturnMyStuff -->
-                        <div class="card">
+                        	<div class="card">
                             <header class="card-header">
                                 <p class="card-header-title">
                                     <span>Web View App  </span>
@@ -330,9 +332,9 @@
                         </div>
                     </div>
 			
+							<!-- PORTFOLIO -->
 			
                     <div class="column">
-                        <!-- OUM LILA -->
                         <div class="card">
                             <header class="card-header">
                                 <p class="card-header-title">
@@ -348,7 +350,7 @@
                                     <img src="img/portfolio/gallery5.png">
                                 </figure>
                                 <div style="margin-top:1em" class="content">
-                                    Static portfolio site
+                                    My portfolio site.
                                     <br>
                                     <br>
                                 </div>
@@ -372,11 +374,13 @@
                                     <span class="icon">
                                         <i class="fab fa-github"> </i>
                                     </span>
-                                    Code
+                                    Source Code
                                 </a>
                             </footer>
                         </div>
                     </div>
+						<!--END-->
+			
                     <div class="column">
 
                     </div>
