--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                             </header>
                             <div class="card-content">
                                 <figure class="image">
-                                    <img src="img/portfolio/gallery8.jpg" >
+                                    <img src="img/portfolio/gallery8.jpg" alt="OUM Zarabi screenshot" >
                                 </figure>
                                 <div style="margin-top:1em" class="content">
                                     Web view App for Android.
@@ -347,7 +347,7 @@
                             </header>
                             <div class="card-content">
                                 <figure class="image">
-                                    <img src="img/portfolio/gallery5.png">
+                                    <img src="img/portfolio/gallery5.png" alt="OUM Zarabi screenshot">
                                 </figure>
                                 <div style="margin-top:1em" class="content">
                                     My portfolio site.
