--- a/index.html
+++ b/index.html
@@ -180,23 +180,25 @@
                                 <p class="card-header-title">
                                     <span>Techfinix'18</span>
                                     <span class="is-pulled-right">
-                                        <span class="tag is-danger">HTML</span>
-                                        <span class="tag is-success">CSS</span>
-                                        <span class="tag is-success">PHP</span>
+                                        <span class="tag is-danger">JAVA</span>
+                                        <span class="tag is-success">XML</span>
                                     </span>
                                 </p>
                             </header>
                             <div class="card-content">
                                 <figure class="image">
-                                    <img src="img/portfolio/gallery4.png" alt="OUM Zarabi screenshot">
+                                    <img src="img/portfolio/gallery9.png" alt="OUM Zarabi screenshot">
                                 </figure>
                                 <div style="margin-top:1em" class="content">
-                                    Techfinix18 -PHP used for backend development
+                                    Messenger App -Native app developed in android studio
                                 </div>
                                 <div class="field is-grouped-multiline">
                                     <div class="control">
                                         <div class="tags">
-                                            <a class="tag is-primary">Symposium Website</a>
+                                            <a class="tag is-primary">Firebase</a>
+						<a class="tag is-info">Android Studio</a>
+                                            <a class="tag is-warning">2020</a>
+
                                         </div>
                                     </div>
                                 </div>
