--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                         <div class="card">
                             <header class="card-header">
                                 <p class="card-header-title">
-                                    <span>Techfinix'18</span>
+                                    <span>Messenger App</span>
                                     <span class="is-pulled-right">
                                         <span class="tag is-danger">JAVA</span>
                                         <span class="tag is-success">XML</span>
