--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                             </header>
                             <div class="card-content">
                                 <figure class="image">
-                                    <img src="img/portfolio/gallery9.png" alt="OUM Zarabi screenshot">
+                                    <img src="img/portfolio/gallery9.jpg" alt="OUM Zarabi screenshot">
                                 </figure>
                                 <div style="margin-top:1em" class="content">
                                     Messenger App -Native app developed in android studio
