--- a/index.html
+++ b/index.html
@@ -90,49 +90,10 @@
         <div class="hero-body">
             <div class="container content-wrapper">
 
-                <!-- 1st line -->
+               <!-- 1st line -->
                 <div class="columns">
-                    <div class="column">
-                        <!-- Adapt.ai -->
-                        <div class="card">
-                            <header class="card-header">
-                                <p class="card-header-title">
-                                    <span>Face Detection</span>
-                                    <span class="is-pulled-right">
-                                        <span class="tag is-warning">JAVA</span>
-                                    </span>
-                                </p>
-                            </header>
-                            <div class="card-content">
-                                <figure class="image">
-                                    <img src="img/portfolio/gallery1.png">
-                                </figure>
-                                <div style="margin-top:1em" class="content">
-                                    The project aim is to deliver the Face description to the user. Eg:Gender,Age,Smile,Facial Hair etc
-                                </div>
-                                <div class="field is-grouped-multiline">
-                                    <div class="control">
-                                        <div class="tags">
-                                            <a class="tag is-primary">blog Project</a>
-                                            <a class="tag is-info">Android Studio</a>
-                                            <a class="tag is-warning">2020</a>
-                                            <a class="tag is-success">API</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <footer class="card-footer">
-                                <a href="https://afaquejaya.github.io/" class="card-footer-item">
-                                    <span class="icon">
-                                        <i class="fab fa-github"> </i>
-                                    </span>
-                                    Source Code
-                                </a>
-                            </footer>
-                        </div>
-                    </div>
-			
-			
+				
+				<!-- ----Social Media app-- -->
                     <div class="column">
                         <!-- If you played for -->
                         <div class="card">
@@ -158,6 +119,46 @@
                                             <a class="tag is-primary">For Learning</a>
                                            <a class="tag is-info">Android Studio</a>
                                             <a class="tag is-warning">2019</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <footer class="card-footer">
+                                <a href="https://afaquejaya.github.io/" class="card-footer-item">
+                                    <span class="icon">
+                                        <i class="fab fa-github"> </i>
+                                    </span>
+                                    Source Code
+                                </a>
+                            </footer>
+                        </div>
+                    </div>
+					
+					<!-- ----Facial Recog app-- -->
+					<div class="column">
+                        <!-- Adapt.ai -->
+                        <div class="card">
+                            <header class="card-header">
+                                <p class="card-header-title">
+                                    <span>Face Detection</span>
+                                    <span class="is-pulled-right">
+                                        <span class="tag is-warning">JAVA</span>
+                                    </span>
+                                </p>
+                            </header>
+                            <div class="card-content">
+                                <figure class="image">
+                                    <img src="img/portfolio/gallery1.png">
+                                </figure>
+                                <div style="margin-top:1em" class="content">
+                                    The project aim is to deliver the Face description to the user. Eg:Gender,Age,Smile,Facial Hair etc
+                                </div>
+                                <div class="field is-grouped-multiline">
+                                    <div class="control">
+                                        <div class="tags">
+                                            <a class="tag is-info">Android Studio</a>
+                                            <a class="tag is-warning">2020</a>
+                                            <a class="tag is-success">API</a>
                                         </div>
                                     </div>
                                 </div>
