--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                         </h1>
                         <h3 class="subtitle is-3 has-text-justified has-text-weight-light">
                             I'm
-                            <strong> Afaque Jaya</strong>, Android App developer <i class="em em-male-technologist"></i>
-                            & Open source enthusiastic<i class="em em-penguin"></i>&nbsp;love to build Mobile App & API &nbsp;<i class="em em-sparkling_heart"></i>
+                            <strong> Afaque Jaya</strong>, Software Engineer <i class="em em-male-technologist"></i>
+                            & Open source enthusiastic<i class="em em-penguin"></i>&nbsp;love to build Mobile App & Website &  API &nbsp;<i class="em em-sparkling_heart"></i>
 
                         </h3>
                     </div>
