--- a/index.html
+++ b/index.html
@@ -432,12 +432,16 @@
     <footer class="footer has-background-white">
         <div class="content has-text-centered has-text-dark">
             <p>
+		<a style="padding-right: 0.5em " href="https://www.instagram.com/afaque_jaya/ ">
+                    <i class="fab fa-instagram fa-2x "></i>
+                </a>
                 <a style="padding-right: 0.5em " href="https://www.linkedin.com/in/afaque-jaya-5b6311134 ">
                     <i class="fab fa-linkedin-in fa-2x "></i>
                 </a>
                 <a style="padding-right: 0.5em " href="https://github.com/Afaquejaya ">
                     <i class="fab fa-github fa-2x "></i>
                 </a>
+		
             </p>
             <p>
                 Copyrights © <a target="_blank" href="index.html">Afaque Jaya</a> 2020 |
