--- a/cv/cv.html
+++ b/cv/cv.html
@@ -25,13 +25,27 @@
             <div class="contact-container container-block">
                 <ul class="list-unstyled contact-list">
                     <li class="phone"><i class="fa fa-phone"></i> +91 87978 01820</li>
-                    <li class="phone"><i class="fa fa-phone"></i> +971 XXX XXX XXX (Dubai)</li>
+                    <li class="phone"><i class="fa fa-phone"></i> +971 50810 3246 (Dubai)</li>
                     <li class="email"><i class="fa fa-envelope"></i><a href="mailto:afaquejaya123@gmail.com">afaquejaya123@gmail.com</a></li>
                     <li class="linkedin"><i class="fa fa-linkedin"></i><a href="https://www.linkedin.com/in/afaque-jaya-5b6311134" target="_blank">linkedin.com/in/afaquejaya</a></li>
                     <li class="github"><i class="fa fa-github"></i><a href="https://github.com/Afaquejaya" target="_blank">github.com/Afaquejaya</a></li>
                     <li class="stack-overflow"><i class="fa fa-code"></i><a href="https://www.hackerrank.com/afaquejaya123/" target="_blank">hackerrank.com/afaquejaya123</a></li>
                 </ul>
             </div>
+
+            <div class="skills-container container-block">
+                <h2 class="container-block-title">Technical Skills</h2>
+                <ul class="list-unstyled interests-list">
+                    <li>Coding: Java, Kotlin, Dart, C#, PHP</li>
+                    <li>Architecture: MVVM, MVP, MVC</li>
+                    <li>Frontend: XML, XAML, HTML</li>
+                    <li>Version Control: GitHub, SVN, Gitlab</li>
+                    <li>Software Tools: Android Studio, Visual Studio, SQL Server</li>
+                    <li>UI/UX: Figma, Procreate, Illustrator</li>
+                    <li>Problem Solving, Documentation, Complexity Analysis</li>
+                </ul>
+            </div>
+
             <div class="education-container container-block">
                 <h2 class="container-block-title">Education</h2>
                 <div class="item">
@@ -51,6 +65,7 @@
                 </div>
             </div>
         </div>
+
         <div class="main-wrapper">
             <section class="section summary-section">
                 <h2 class="section-title"><i class="fa fa-user"></i>Objective</h2>
@@ -60,7 +75,6 @@
             </section>
             <section class="section experiences-section">
                 <h2 class="section-title"><i class="fa fa-briefcase"></i>Professional Experience</h2>
-                <!-- Jeeb E-Commerce -->
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
@@ -77,10 +91,10 @@
                             <li>Led remote team; boosted productivity by 30%.</li>
                             <li>Enhanced app with 20+ features; developed version in Flutter.</li>
                             <li>Managed fleet/logistics apps: Driver, Collector, Store Keeper.</li>
+                            <li>Apps: <a href="https://apps.apple.com/ae/app/jeeb-grocery-service/id1614152924" target="_blank">Jeeb (iOS)</a>, <a href="https://play.google.com/store/apps/details?id=qa.pass&hl=en_IN&gl=US" target="_blank">Pass Delivery (Android)</a></li>
                         </ul>
                     </div>
                 </div>
-                <!-- CSM Technology -->
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
@@ -95,38 +109,7 @@
                             <li>Integrated biometric attendance, MDM tracking, geolocation features.</li>
                             <li>Contributed to DigiSchool (e-learning app).</li>
                             <li>Led QA/UAT efforts, reducing app crashes by 30%.</li>
-                        </ul>
-                    </div>
-                </div>
-                <!-- JUSCO -->
-                <div class="item">
-                    <div class="meta">
-                        <div class="upper-row">
-                            <h3 class="job-title">Android Developer</h3>
-                            <div class="time">Jan 2020 – Aug 2020</div>
-                        </div>
-                        <div class="company">JUSCO (Tata Steel), Jamshedpur</div>
-                    </div>
-                    <div class="details">
-                        <ul>
-                            <li>Digitized vendor register processes; reduced data entry time by 70%.</li>
-                            <li>Built REST APIs and SQL server backend.</li>
-                        </ul>
-                    </div>
-                </div>
-                <!-- MFK Software -->
-                <div class="item">
-                    <div class="meta">
-                        <div class="upper-row">
-                            <h3 class="job-title">Mobile App Developer</h3>
-                            <div class="time">Aug 2019 – Jan 2020</div>
-                        </div>
-                        <div class="company">MFK Software, Jamshedpur</div>
-                    </div>
-                    <div class="details">
-                        <ul>
-                            <li>Built cross-platform school app using Xamarin; improved efficiency by 40%.</li>
-                            <li>Designed UI, increased sales by 40%.</li>
+                            <li>App: <a href="https://play.google.com/store/apps/details?id=com.evidyavahini.app" target="_blank">EVV2.0</a></li>
                         </ul>
                     </div>
                 </div>
@@ -134,22 +117,11 @@
             <section class="section">
                 <h2 class="section-title"><i class="fa fa-code"></i>Projects</h2>
                 <ul>
-                    <li>Video Calling App (Android, Agora)</li>
-                    <li>Messenger App (Firebase, Firestore)</li>
-                    <li>Face Detection App (Microsoft Face API)</li>
-                    <li>Social Media Android App (Firebase, REST API)</li>
-                    <li>Restaurant Booking ChatBot (IBM Watson)</li>
-                </ul>
-            </section>
-            <section class="skills-section section">
-                <h2 class="section-title"><i class="fa fa-wrench"></i>Technical Skills</h2>
-                <ul>
-                    <li>Coding: Java, Kotlin, Dart, C#, PHP</li>
-                    <li>Architecture: MVVM, MVP, MVC</li>
-                    <li>Frontend: XML, XAML, HTML</li>
-                    <li>Version Control: GitHub, SVN, Gitlab</li>
-                    <li>Tools: Android Studio, Visual Studio, SQL Server</li>
-                    <li>UI/UX: Figma, Procreate, Illustrator</li>
+                    <li><strong>Video Calling App</strong> - Android Studio, Agora: Live streaming, one-to-one video/voice, and RTM chat.</li>
+                    <li><strong>Messenger App</strong> - Firebase: Real-time chat & call with Google sign-in.</li>
+                    <li><strong>Face Detection App</strong> - Face API: Detects age, gender, expression, hair, etc.</li>
+                    <li><strong>Social Media App</strong> - Firebase + REST: Share text/image, like, comment, notify.</li>
+                    <li><strong>Restaurant Chatbot</strong> - IBM Watson: Table booking chatbot using location/time.</li>
                 </ul>
             </section>
             <section class="section">
